CORRECTION GAP pour subfilter-list

--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,9 @@ font-size: 1.1rem;
 }
 
 .subfilter-list{
-    display: flex; 
+    display: flex;
+    gap: 15px; /*CORRECTION LAST*/
+
 
 }
 
